force-app/src/objects/TR1__JobManagerViewMenu__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>TR1__AllCandidates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide All Candidates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Application__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__ClosingReport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Closing Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Offer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Sendout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Sendout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Submittal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Submittal</label>
        <type>Checkbox</type>
    </fields>
    <label>Job Manager View Menu Hide Settings</label>
</CustomObject>